--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -121,7 +121,7 @@
                   Sign in
                 </button>
 
-                <a style="text-decoration:none;color:inherit;" href="number_check"><p>Login with otp<p></a>
+                <a style="text-decoration:none;color:inherit;" href="account/number_check"><p>Login with otp<p></a>
   
                 <!-- Register buttons -->
                 <div class="text-center">
