--- a/templates/admin_coupons.html
+++ b/templates/admin_coupons.html
@@ -26,15 +26,17 @@
                 <th scope="col">Discount Amount</th>
                 <th scope="col">Start Date</th>
                 <th scope="col">End Date</th>
+                <th scope="col">Edit</th>
                 {% comment %} <th scope="col">Last Login</th> {% endcomment %}
                 {% comment %} <th scope="col">Password</th> {% endcomment %}
                 <th scope="col">Block</th>
-                {% comment %} <th scope="col">Delete</th> {% endcomment %}
+                <th scope="col">Delete</th>
               </tr>
             </thead>
             <tbody>
+              {% for coupon in coupons %}
               <tr class="table-info">
-                {% for coupon in coupons %}
+                
                 <td></td>
                 <td>{{coupon.name}}</td>
                 <td>{{coupon.code}}</td>
@@ -42,11 +44,13 @@
                 <td>{{coupon.discount_amount}}</td>
                 <td>{{coupon.start_date}}</td>
                 <td>{{coupon.end_date}}</td>
+                <td><button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#Modal5{{coupon.id}}">Edit</button></td>
                 {% if coupon.is_active %}
                 <td><button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#Modal1{{coupon.id}}">Block</button></td>
                 {% else %}
                 <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal3{{coupon.id}}">Un Block</button></td>
                 {% endif %}
+                <td><button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#Modal4{{coupon.id}}">Delete</button></td>
             </tr>
             <div class="modal fade" id="Modal1{{coupon.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
@@ -65,6 +69,25 @@
                 </div>
               </div>
             </div>
+
+            <div class="modal fade" id="Modal4{{coupon.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    Are You Sure...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a href="admin_coupon_delete/{{coupon.id}}"><button type="button" class="btn btn-danger">Confirm</button></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="modal fade" id="Modal3{{coupon.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -82,6 +105,55 @@
                 </div>
               </div>
             </div>
+
+            <div class="modal fade" id="Modal5{{coupon.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <form action="admin_coupon_edit/{{coupon.id}}" method="POST">
+                  {% csrf_token %}
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add New Offer</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <label data-error="wrong" data-success="right" for="defaultForm-email">Coupon Name</label>
+                    <input type="text" id="defaultForm-email" name="name" value={{coupon.name}} class="form-control validate">
+                  </div>
+                  <div class="modal-body">
+                    <label data-error="wrong" data-success="right" for="defaultForm-email">the Coupon Code</label>
+                    <input type="text" id="defaultForm-email" name="code" value={{coupon.code}} class="form-control validate">
+                  </div>
+                  <div class="modal-body">
+                      <label data-error="wrong" data-success="right" for="defaultForm-email">Maxmimum Off Amount For Apply</label>
+                      <input type="text" id="defaultForm-email" name="max_amount" value={{coupon.max_amount}} class="form-control validate">
+                    </div>
+                    <div class="modal-body">
+                        <label data-error="wrong" data-success="right" for="defaultForm-email">The Discount Amount</label>
+                        <input type="text" id="defaultForm-email" name="discount_amount" value={{coupon.discount_amount}} class="form-control validate">
+                      </div>
+                  {% comment %} <div class="row">
+                      <div class="col">
+                      <div class="modal-body">
+                          <label data-error="wrong" data-success="right" for="defaultForm-email">Start Date</label>
+                          <input type="date" id="defaultForm-email" name="start_date" value={{coupon.end_date}} class="form-control validate">
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="modal-body">
+                          <label data-error="wrong" data-success="right" for="defaultForm-email">End Date</label>
+                          <input type="date" id="defaultForm-email" name="end_date" value={{coupon.end_date}} class="form-control validate">
+                        </div>
+                      </div>
+                  </div> {% endcomment %}
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-success">Confirm</button>
+                  </div>
+                </div>
+              </form>
+              </div>
+            </div>
+
               {% endfor %}
             </tbody>
           </table>
@@ -117,13 +189,13 @@
           <div class="col">
           <div class="modal-body">
               <label data-error="wrong" data-success="right" for="defaultForm-email">Start Date</label>
-              <input type="date" id="defaultForm-email" name="start_date" class="form-control validate">
+              <input type="date" id="start" name="start_date" class="form-control validate">
             </div>
           </div>
           <div class="col">
             <div class="modal-body">
               <label data-error="wrong" data-success="right" for="defaultForm-email">End Date</label>
-              <input type="date" id="defaultForm-email" name="end_date" class="form-control validate">
+              <input type="date" id="end" name="end_date" class="form-control validate">
             </div>
           </div>
       </div>
@@ -140,6 +212,33 @@
 
 {% block js %}
 
+<script>
+  $("#start").on("change", function () {
+      $("#end").attr("min", $(this).val());
+ });
+</script>
+<script>
+  $(document).ready(function () {
+      let today = new Date()
+      var dd = today.getDate();
+      var mm = today.getMonth() + 1;
+
+      var yyyy = today.getFullYear();
+      if (dd < 10) {
+          dd = '0' + dd;
+      }
+      if (mm < 10) {
+          mm = '0' + mm;
+      }
+      today = yyyy + '-' + mm + '-' + dd;
+
+      $('#start').attr('min', today)
+      $('#start').change(function () {
+          let date = document.getElementById('start').value
+          $('#exp').attr('min', date)
+      })
+    })
+</script>
           {% comment %} {% else %} {% endcomment %}
         {% comment %} {% endif %}  {% endcomment %}
         {% if messages %}
