--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -64,7 +64,7 @@
           <script>
               var ctx = document.getElementById('myChart1').getContext('2d');
               var myChart1 = new Chart(ctx, {
-                  type: 'bar',
+                  type: 'line',
                   data: { 
                       labels: [{% for o in order %} '{{o.id}}', {% endfor %}],
                       
@@ -151,6 +151,53 @@
   </div>
   </div>
 </div>
+<div class="row mt-5">
+  <div class="col-md-6 bg-light rounded border border-dark">
+    <div class="container">
+    <h3 class="mt-3 fw-bold ms-3">Restaurant - Menu Item chart</h3>
+<hr>
+        <canvas class="mt-3 " id="myChart3" width="0" height="200"></canvas>
+        <script>
+            var ctx = document.getElementById('myChart3').getContext('2d');
+            var myChart1 = new Chart(ctx, {
+                type: 'bar',
+                data: { 
+                    labels: [{% for r in res %} '{{r.name}}', {% endfor %}],
+                    
+                datasets: [{
+                label: 'Menu Item Count',
+                data: [{% for a in a %} '{{a}}', {% endfor %}],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                  }]
+                      },
+                  options: {
+                      scales: {
+                          yAxes: [{
+                              ticks: {
+                                  beginAtZero: true
+                              }
+                          }]
+                      }
+                  }
+                  });
+              </script>
+  </div>
 
 
 {% comment %} modal {% endcomment %}
