--- a/templates/restaurant_det.html
+++ b/templates/restaurant_det.html
@@ -46,7 +46,7 @@
             </div>
             </div>
             <p class = "pt-1 ps-5"><span>{{res.address}}</span></p>
-            {% if res_offers %}
+            {% if res_offers and res_offers.status == True %}
             <h4 class = "pt-1 ps-5" style="color:red"><span class="bg-danger rounded " style="font-size:25px;color:white;">&nbsp;{{res_offers.offer_name}},Get {{res_offers.offer_percentage}}% upto ₹{{res_offers.offer_max_amount}} &nbsp;</span></h4>
             {% endif %}
           </div>
@@ -73,7 +73,7 @@
                     <div class="card-body">
                       <h5 class="card-title">{{item.item_name}}</h5>
                       <p class="card-text">{{item.food_category.cat_name}}</p>
-                      <p class="card-text"><small class="text-muted">Price: ₹{{item.price}}{% for cat_offer in cat_offers %} {% if item.food_category == cat_offer.category %}| <span class="bg-danger rounded text-white">&nbsp; {{cat_offer.offer_percentage}}% off&nbsp; <span>{% endif %}{% endfor %}</small></p>
+                      <p class="card-text"><small class="text-muted">Price: ₹{{item.price}}{% for cat_offer in cat_offers %} {% if item.food_category == cat_offer.category and cat_offer.status == True %}| <span class="bg-danger rounded text-white">&nbsp; {{cat_offer.offer_percentage}}% off&nbsp; <span>{% endif %}{% endfor %}</small></p>
                       <div class=" ms-4">
                       <a href="{{res.id}}/home_cat_add/{{item.id}}"><button type="button" class="btn btn-dark">Add To Cart</button></a>
                     </div>
