--- a/templates/signup_otp.html
+++ b/templates/signup_otp.html
@@ -119,7 +119,7 @@
   
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary btn-block mb-4">
-                  Get OTP
+                  Submit
                 </button>
 
   
