--- a/templates/restaurant_reg.html
+++ b/templates/restaurant_reg.html
@@ -51,7 +51,7 @@
                           <div class="row">
                             <div class="col-md-6 mb-4">
                               <div class="form-outline">
-                                <input type="text" id="form3Example1m" name="name" class="form-control form-control-lg" />
+                                <input type="text" id="form3Example1m" name="name" class="form-control form-control-lg" required />
                                 <label class="form-label" for="form3Example1m">Restaurant Name</label>
                               </div>
                             </div>
@@ -66,13 +66,13 @@
                           <div class="row">
                             <div class="col-md-6 mb-4">
                               <div class="form-outline">
-                                <input type="password" id="form3Example1m1" name="password1" class="form-control form-control-lg" />
+                                <input type="password" id="form3Example1m1" name="password1" class="form-control form-control-lg" required />
                                 <label class="form-label" for="form3Example1m1">Password</label>
                               </div>
                             </div>
                             <div class="col-md-6 mb-4">
                               <div class="form-outline">
-                                <input type="password" id="form3Example1n1" name="password2" class="form-control form-control-lg" />
+                                <input type="password" id="form3Example1n1" name="password2" class="form-control form-control-lg" required />
                                 <label class="form-label" for="form3Example1n1">Confirm Password</label>
                               </div>
                             </div>
@@ -150,7 +150,7 @@
                           </div> {% endcomment %}
           
                           <div class="form-outline mb-4">
-                            <input type="email" id="form3Example97" name="email" class="form-control form-control-lg" />
+                            <input type="email" id="form3Example97" name="email" class="form-control form-control-lg" required />
                             <label class="form-label" for="form3Example97">Email ID</label>
                           </div>
 
