--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -50,7 +50,7 @@
                           <div class="row">
                             <div class="col-md-6 mb-4">
                               <div class="form-outline">
-                                <input type="text" id="form3Example1m" name="name" class="form-control form-control-lg" />
+                                <input type="text" id="form3Example1m" name="name" class="form-control form-control-lg" required />
                                 <label class="form-label" for="form3Example1m">Name</label>
                               </div>
                             </div>
@@ -65,13 +65,13 @@
                           <div class="row">
                             <div class="col-md-6 mb-4">
                               <div class="form-outline">
-                                <input type="password" id="form3Example1m1" name="password1" class="form-control form-control-lg" />
+                                <input type="password" id="form3Example1m1" name="password1" class="form-control form-control-lg" required />
                                 <label class="form-label" for="form3Example1m1">Password</label>
                               </div>
                             </div>
                             <div class="col-md-6 mb-4">
                               <div class="form-outline">
-                                <input type="password" id="form3Example1n1" name="password2" class="form-control form-control-lg" />
+                                <input type="password" id="form3Example1n1" name="password2" class="form-control form-control-lg" required />
                                 <label class="form-label" for="form3Example1n1">Confirm Password</label>
                               </div>
                             </div>
@@ -86,7 +86,7 @@
                             </select>
                           </div>
                           <div class="form-outline mb-4">
-                            <input type="text" id="form3Example8" name="phone" class="form-control form-control-lg" />
+                            <input type="text" id="form3Example8" name="phone" class="form-control form-control-lg" required />
                             <label class="form-label" for="form3Example8">Phone Number (with +91)</label>
                           </div>
           
@@ -153,7 +153,7 @@
                           </div> {% endcomment %}
           
                           <div class="form-outline mb-4">
-                            <input type="email" id="form3Example97" name="email" class="form-control form-control-lg" />
+                            <input type="email" id="form3Example97" name="email" class="form-control form-control-lg" required />
                             <label class="form-label" for="form3Example97">Email ID</label>
                           </div>
           
