--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -96,13 +96,13 @@
   
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="text" id="form3Example3" name="username" class="form-control" />
+                  <input type="text" id="form3Example3" name="username" class="form-control" required/>
                   <label class="form-label" for="form3Example3">User Name</label>
                 </div>
   
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4" name="password" class="form-control" />
+                  <input type="password" id="form3Example4" name="password" class="form-control" required/>
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
   
