--- a/templates/store_login.html
+++ b/templates/store_login.html
@@ -106,13 +106,13 @@
   
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="text" name="email" id="form3Example3" class="form-control" />
+                  <input type="text" name="email" id="form3Example3" class="form-control" required />
                   <label class="form-label" for="form3Example3">Email address</label>
                 </div>
   
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" name="password" id="form3Example4" class="form-control" />
+                  <input type="password" name="password" id="form3Example4" class="form-control" required />
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
   
