--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -104,13 +104,13 @@
   
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="email" id="form3Example3" name="email" class="form-control" />
+                  <input type="email" id="form3Example3" name="email" class="form-control" required />
                   <label class="form-label" for="form3Example3">Email address</label>
                 </div>
   
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4"name="password" class="form-control" />
+                  <input type="password" id="form3Example4"name="password" class="form-control" required />
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
   
